# senior-analyst-portfolio

./: .gitignore  DEPLOYMENT.md  Dockerfile.frontend  README.md  README_JAVA.md  cleanup.sh  deploy-prod.sh  deploy.sh  docker-compose.yml  index.html  nginx.conf  script.js  styles.css
backend/: pom.xml
backend/src/main/java/com/portfolio/config/: DataInitializer.java
backend/src/main/java/com/portfolio/controller/: PortfolioController.java
backend/src/main/java/com/portfolio/model/: ContactMessage.java  Expertise.java  Project.java
backend/src/main/java/com/portfolio/repository/: ExpertiseRepository.java  ProjectRepository.java
backend/src/main/java/com/portfolio/service/: PortfolioService.java
backend/src/main/resources/: application.properties
cpp-backend/: CMakeLists.txt  Dockerfile  README_CPP.md
cpp-backend/include/: database.hpp  middleware.hpp  models.hpp  routes.hpp
cpp-backend/src/: main.cpp
cpp-backend/src/database/: database.cpp  models.cpp
cpp-backend/src/middleware/: middleware.cpp
cpp-backend/src/routes/: api_routes.cpp
